--- a/_11_i2c_spi/11_2_SPI_SDD1306/.vscode/settings.json
+++ b/_11_i2c_spi/11_2_SPI_SDD1306/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    
+    "terminal.integrated.env.windows": {
+        "IDF_PATH":"C:\\Users\\mairs\\esp\\esp-idf",
+    },
     "terminal.integrated.shell.windows": "cmd.exe",
     "terminal.integrated.shellArgs.windows": [
         "/k",
