--- a/_13_Internet_Connection/_13_1_exampleConnect_to_del/.vscode/settings.json
+++ b/_13_Internet_Connection/_13_1_exampleConnect_to_del/.vscode/settings.json
@@ -13,7 +13,6 @@
     "files.associations": {
         "*.md": "markdown",
         "*.mdx": "tdx",
-        "stdio.h": "c",
-        "rtc_io.h": "c"
+        "stdio.h": "c"
     }
 }
