--- a/_19_bluetooth/ble_hid_device_demo_spike/.vscode/settings.json
+++ b/_19_bluetooth/ble_hid_device_demo_spike/.vscode/settings.json
@@ -8,6 +8,10 @@
   "files.associations": {
     "*.md": "markdown",
     "*.mdx": "tdx",
-    "stdio.h": "c"
-  }
+    "stdio.h": "c",
+    "esp_hidd_prf_api.h": "c"
+  },
+  "cSpell.words": [
+    "battary"
+  ]
 }
