--- a/_7_configuration_with_menuconfig/_7_2_custom_configuration/.vscode/settings.json
+++ b/_7_configuration_with_menuconfig/_7_2_custom_configuration/.vscode/settings.json
@@ -1,18 +1,13 @@
 {
-    "terminal.integrated.shell.windows": "cmd.exe",
-    "terminal.integrated.shellArgs.windows": [
-        "/k",
-        "c:\\esp\\esp-idf\\export.bat"
-    ],
-    "terminal.integrated.shell.linux":"/bin/bash",
-    "terminal.integrated.shellArgs.linux": [
-        "--init-file", 
-        "~/esp/esp-idf/export.sh",
-        "-i",
-    ],
-    "files.associations": {
-        "*.md": "markdown",
-        "*.mdx": "tdx",
-        "stdio.h": "c"
-    }
+  "terminal.integrated.shell.windows": "cmd.exe",
+  "terminal.integrated.shellArgs.windows": ["/k", "c:\\esp\\esp-idf\\export.bat"],
+  "terminal.integrated.shell.linux": "/bin/bash",
+  "terminal.integrated.shellArgs.linux": ["--init-file", "~/esp/esp-idf/export.sh", "-i"],
+  "terminal.integrated.shell.osx": "/bin/bash",
+  "terminal.integrated.shellArgs.osx": ["--init-file", "~/esp/esp-idf/export.sh", "-i"],
+  "files.associations": {
+    "*.md": "markdown",
+    "*.mdx": "tdx",
+    "stdio.h": "c"
+  }
 }
