deep sllep ext 0

--- a/_3_first_look/_2_1_logging/.vscode/settings.json
+++ b/_3_first_look/_2_1_logging/.vscode/settings.json
@@ -8,7 +8,6 @@
   "files.associations": {
     "*.md": "markdown",
     "*.mdx": "tdx",
-    "stdio.h": "c",
-    "freertos.h": "c"
+    "stdio.h": "c"
   }
 }
