--- a/_19_bluetooth/_19_6_GAPP_Client/.vscode/settings.json
+++ b/_19_bluetooth/_19_6_GAPP_Client/.vscode/settings.json
@@ -10,6 +10,8 @@
     "*.mdx": "tdx",
     "stdio.h": "c",
     "nimble_port.h": "c",
-    "ble_hs.h": "c"
+    "ble_hs.h": "c",
+    "random": "c",
+    "*.ipp": "c"
   }
 }
