--- a/_11_i2c_spi/_11_0_bluetooth_serial/main/CMakeLists.txt
+++ b/_11_i2c_spi/_11_0_bluetooth_serial/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "main.c" )
-set(COMPONENT_ADD_INCLUDEDIRS ".")
+set(COMPONENT_SRCS main.c )
+set(COMPONENT_ADD_INCLUDEDIRS .)
 
 register_component()
